client/src/assets/main.css
@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    font-family: "Fira Sans", sans-serif;
    min-width: 200px;
    max-width: 1200px;
    margin: 0 auto !important;
    @apply p-8;
  }

  p {
    @apply mb-4;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply mb-2 font-bold;
  }

  h1 {
    @apply text-3xl;
  }

  h2 {
    @apply text-xl;
  }

  a:not(.p-button) {
    @apply text-primary underline underline-offset-2;
  }

  a:hover:not(.p-button) {
    @apply decoration-2;
  }

  ul,
  ol {
    @apply pl-4;
  }

  ul {
    @apply list-disc;
  }

  ol {
    @apply list-decimal;
  }

  blockquote {
    @apply border-l-4 pl-2.5 my-2 border-surface-200 dark:border-surface-600;
  }
}

.color-error {
  @apply text-red-600 dark:text-red-300;
}

.p-dialog {
  @apply m-8 max-w-xl;
}

